# renderingEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/math/: normal.hpp  ray.hpp  vector.hpp
include/shapes/: sphere.hpp
include/utilities/: RGBcolor.hpp
math/: CMakeLists.txt  header.hpp  math.hpp  matrix.cpp  matrix.hpp  normal.cpp  normal.hpp  point.cpp  point.hpp  vector.cpp  vector.hpp
physics/: CMakeLists.txt  material.hpp
shapes/: CMakeLists.txt  object.hpp  sphere.cpp
source/math/: matrix.cpp  normal.cpp  ray.cpp  vector.cpp
source/utilities/: RGBColor.cpp  hitrec.cpp
utilities/: CMakeLists.txt  RGBColor.cpp  RGBcolor.hpp  camera.cpp  camera.hpp  headers.hpp  hitrec.hpp  world.hpp
